// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's ecommerce destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "_update_existing_only": true,
      "app_id": "tZlmdH(v3%S",
      "braze_id": "tZlmdH(v3%S",
      "email": "urbapwid@avo.dz",
      "external_id": "tZlmdH(v3%S",
      "name": "ecommerce.checkout_started",
      "phone": "tZlmdH(v3%S",
      "properties": Object {
        "cart_id": "tZlmdH(v3%S",
        "checkout_id": "tZlmdH(v3%S",
        "currency": "HTG",
        "metadata": Object {
          "testType": "tZlmdH(v3%S",
        },
        "products": Array [
          Object {
            "image_url": "http://vaci.va/inu",
            "price": -17122291498352.64,
            "product_id": "tZlmdH(v3%S",
            "product_name": "tZlmdH(v3%S",
            "product_url": "http://vaci.va/inu",
            "quantity": -17122291498352.64,
            "variant_id": "tZlmdH(v3%S",
          },
        ],
        "source": "tZlmdH(v3%S",
        "total_value": -17122291498352.64,
      },
      "time": "2025-01-01T00:00:00.000Z",
      "user_alias": Object {
        "alias_label": "tZlmdH(v3%S",
        "alias_name": "tZlmdH(v3%S",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's ecommerce destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "app_id": "tZlmdH(v3%S",
      "braze_id": "tZlmdH(v3%S",
      "external_id": "tZlmdH(v3%S",
      "name": "ecommerce.checkout_started",
      "properties": Object {
        "cart_id": "tZlmdH(v3%S",
        "checkout_id": "tZlmdH(v3%S",
        "currency": "HTG",
        "products": Array [
          Object {
            "price": -17122291498352.64,
            "product_id": "tZlmdH(v3%S",
            "product_name": "tZlmdH(v3%S",
            "quantity": -17122291498352.64,
            "variant_id": "tZlmdH(v3%S",
          },
        ],
        "source": "tZlmdH(v3%S",
        "total_value": -17122291498352.64,
      },
      "time": "2025-01-01T00:00:00.000Z",
    },
  ],
}
`;
